# LLM-AggreFact_subbench

./: .gitignore  construct_dataset.py  evaluate_models.py  pyproject.toml  scorer.py  scorer_test.py
results/: FactCG-DeBERTa-v3-Large.csv  MiniCheck-DeBERTa-v3-Large.csv  MiniCheck-DeBERTa-v3-Large_summary.csv  MiniCheck-Flan-T5-Large.csv  MiniCheck-RoBERTa-Large.csv  our_trained_roberta_large.csv  roberta-large-snli_mnli_fever_anli_R1_R2_R3-nli.csv
results/n=1000/: MiniCheck-DeBERTa-v3-Large.csv  MiniCheck-RoBERTa-Large.csv  our_trained_roberta_large.csv  roberta-large-snli_mnli_fever_anli_R1_R2_R3-nli.csv
results/n=500/: MiniCheck-DeBERTa-v3-Large.csv  MiniCheck-Flan-T5-Large.csv  MiniCheck-RoBERTa-Large.csv  our_trained_roberta_large.csv  roberta-large-snli_mnli_fever_anli_R1_R2_R3-nli.csv
results/with_sliding_stride=3/: FactCG-DeBERTa-v3-Large.csv  MiniCheck-DeBERTa-v3-Large.csv  MiniCheck-Flan-T5-Large.csv  MiniCheck-RoBERTa-Large.csv  roberta-large-snli_mnli_fever_anli_R1_R2_R3-nli.csv
results/with_sliding_stride=5/: MiniCheck-RoBERTa-Large.csv  roberta-large-snli_mnli_fever_anli_R1_R2_R3-nli.csv
