[project]
name = "llm-aggrefact-subbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "ipython>=9.5.0",
    "nltk>=3.9.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[tool.ruff.lint]
extend-select = [ "I" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
